--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -1,56 +1,47 @@
 controller:
-  admin:
-    username: admin
-    password: admin@123
+  installPlugins:
+    - kubernetes:1.29.7
+    - workflow-job:2.44
+    - workflow-aggregator:2.7
+    - credentials-binding:1.27
+    - git:5.2.1
+
+  resources:
+    requests:
+      cpu: "500m"
+      memory: "1Gi"
+    limits:
+      cpu: "1"
+      memory: "2Gi"
+
+  # 👇 This is crucial: allow pod scheduling on control-plane node
+  nodeSelector:
+    node-role.kubernetes.io/control-plane: ""
+
+  tolerations:
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
+
+  # 👇 Mount dynamic PVC
+  persistence:
+    enabled: true
+    existingClaim: jenkins
+    storageClass: jenkins-ebs-sc
+    accessMode: ReadWriteOnce
+    size: 10Gi
 
   serviceType: NodePort
   nodePort: 32000
 
-  installPlugins:
-    - kubernetes
-    - git
-    - workflow-aggregator
-    - blueocean
-    - credentials-binding
-    - docker-workflow
-
-  persistence:
-    enabled: true
-    existingClaim: jenkins
-
-  JCasC:
-    defaultConfig: true
-    configScripts:
-      kubernetes-agent-config: |
-        jenkins:
-          clouds:
-            - kubernetes:
-                name: "kubernetes"
-                serverUrl: "https://kubernetes.default"
-                namespace: "jenkins"
-                jenkinsUrl: "http://jenkins.jenkins.svc.cluster.local:8080"
-                jenkinsTunnel: "jenkins-agent.jenkins.svc.cluster.local:50000"
-                containerCap: 10
-                podRetention: never
-                templates:
-                  - name: "default-agent"
-                    label: "k8s-agent"
-                    containers:
-                      - name: "jnlp"
-                        image: "jenkins/inbound-agent:latest"
-                        args: "${computer.jnlpmac} ${computer.name}"
-                        ttyEnabled: true
-                        resourceRequestCpu: "100m"
-                        resourceRequestMemory: "256Mi"
-                        resourceLimitCpu: "200m"
-                        resourceLimitMemory: "512Mi"
-
 agent:
-  enabled: true
   resources:
     requests:
       cpu: "200m"
-      memory: "256Mi"
+      memory: "512Mi"
     limits:
       cpu: "500m"
-      memory: "512Mi"
+      memory: "1Gi"
+
+persistence:
+  storageClass: jenkins-ebs-sc
