Added storageclass tag for ebs volume for dynamic provisioning

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -16,7 +16,7 @@ controller:
 
   persistence:
     enabled: true
-    existingClaim: jenkins
+    existingClaim: jenkins  # ✅ Use pre-created PVC, do NOT set storageClass/size
 
   JCasC:
     defaultConfig: true
