Added storageclass tag for ebs volume for dynamic provisioning

--- a/manifests/jenkins-ebs-pvc.yaml
+++ b/manifests/jenkins-ebs-pvc.yaml
@@ -3,6 +3,11 @@ kind: PersistentVolumeClaim
 metadata:
   name: jenkins
   namespace: jenkins
+  labels:
+    app.kubernetes.io/managed-by: Helm
+  annotations:
+    meta.helm.sh/release-name: jenkins
+    meta.helm.sh/release-namespace: jenkins
 spec:
   accessModes:
     - ReadWriteOnce
