Added storageclass tag for ebs volume for dynamic provisioning

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -17,6 +17,7 @@ controller:
   persistence:
     enabled: true
     existingClaim: jenkins  # ✅ Use pre-created PVC, do NOT set storageClass/size
+    size: null
 
   JCasC:
     defaultConfig: true
