Added storageclass tag for ebs volume for dynamic provisioning

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -18,6 +18,7 @@ controller:
     enabled: true
     existingClaim: jenkins  # ✅ Use pre-created PVC, do NOT set storageClass/size
     size: null
+    storageClass: ""
 
   JCasC:
     defaultConfig: true
