Added storageclass tag for ebs volume for dynamic provisioning

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -16,8 +16,7 @@ controller:
 
   persistence:
     enabled: true
-    existingClaim: jenkins
-    storageClass: ""
+    storageClass: jenkins-ebs-sc
     size: 20Gi
     annotations: {}
     accessMode: ReadWriteOnce
