--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -1,61 +1,18 @@
 controller:
-  admin:
-    username: admin
-    password: admin@123
+  installPlugins: []
+  runAsUser: 0
+  runAsGroup: 0
+  fsGroup: 0
 
   serviceType: NodePort
-  nodePort: 32000
+  nodePort: 30080
 
-  installPlugins:
-    - kubernetes
-    - git
-    - workflow-aggregator
-    - blueocean
-    - credentials-binding
-    - docker-workflow
+  admin:
+    username: admin
+    password: admin
 
   persistence:
     enabled: true
-    storageClass: jenkins-ebs-sc
-    size: 20Gi
-    annotations: {}
-    accessMode: ReadWriteOnce
-    volumeName: ""
-    subPath: ""
-
-  JCasC:
-    defaultConfig: true
-    configScripts:
-      kubernetes-agent-config: |
-        jenkins:
-          clouds:
-            - kubernetes:
-                name: "kubernetes"
-                serverUrl: "https://kubernetes.default"
-                namespace: "jenkins"
-                jenkinsUrl: "http://jenkins.jenkins.svc.cluster.local:8080"
-                jenkinsTunnel: "jenkins-agent.jenkins.svc.cluster.local:50000"
-                containerCap: 10
-                podRetention: never
-                templates:
-                  - name: "default-agent"
-                    label: "k8s-agent"
-                    containers:
-                      - name: "jnlp"
-                        image: "jenkins/inbound-agent:latest"
-                        args: "${computer.jnlpmac} ${computer.name}"
-                        ttyEnabled: true
-                        resourceRequestCpu: "100m"
-                        resourceRequestMemory: "256Mi"
-                        resourceLimitCpu: "200m"
-                        resourceLimitMemory: "512Mi"
-
-agent:
-  enabled: true
-  resources:
-    requests:
-      cpu: "300m"
-      memory: "768Mi"
-    limits:
-      cpu: "750m"
-      memory: "1.2Gi"
+    existingClaim: jenkins
+    storageClass: ""
+    size: null
