Added pv and pvc for jenkins

--- a/manifests/jenkins-pv.yaml
+++ b/manifests/jenkins-pv.yaml
@@ -9,5 +9,8 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   storageClassName: manual
+  claimRef:
+    namespace: jenkins
+    name: jenkins
   hostPath:
     path: /mnt/jenkins-data
