Added pv and pvc for jenkins

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -14,7 +14,7 @@ controller:
     enabled: true
     existingClaim: jenkins
     size: null
-    storageClass: ""
+    storageClass: "-"
     annotations: {}
     accessMode: ReadWriteOnce
 
