Added pv and pvc for jenkins

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -13,7 +13,7 @@ controller:
   persistence:
     enabled: true
     existingClaim: jenkins
-    size: null
+    size: 10Gi
     storageClass: "-"
     annotations: {}
     accessMode: ReadWriteOnce
