Added pv and pvc for jenkins

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -13,8 +13,8 @@ controller:
   persistence:
     enabled: true
     existingClaim: jenkins
-    size: 10Gi
-    storageClass: "-"
+    storageClass: ""
+    size: null
     annotations: {}
     accessMode: ReadWriteOnce
 
