Added pv and pvc for jenkins

--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -18,6 +18,9 @@ controller:
     annotations: {}
     accessMode: ReadWriteOnce
 
+  volumePermissions:
+    enabled: true  
+
   initContainers:
     - name: volume-permissions
       image: busybox
